# gst-plugins-base

gst/playback/: gstplaysink.c
gst/subparse/: gstsubparse.c  gstzsassparse.c  gstzsassparse.h  meson.build
